<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black_dark"
    >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/taskNameField"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:hint="@string/task_name"
        android:textColorHint="@color/white"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/taskNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:background="@color/black_background"
            android:textColor="@color/white"
            android:textSize="18dp"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/taskPointsField"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:hint="@string/points_text"
        android:textColorHint="@color/white"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/taskPointsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:background="@color/black_background"
            android:textColor="@color/white"
            android:textSize="18dp"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/taskStarsField"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:hint="@string/stars_Text"
        android:textColorHint="@color/white"
        android:layout_marginBottom="20dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/taskStarsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:background="@color/black_background"
            android:textColor="@color/white"
            android:textSize="18dp"
            />

    </com.google.android.material.textfield.TextInputLayout>




</LinearLayout>